@@ -1,3 +1,8 @@
+2013-02-11  Glenn Morris  <rgm@gnu.org>
+
+	* vc/vc-svn.el (vc-svn-command): Move --non-interactive from here...
+	(vc-svn-global-switches): ... to here.  (Bug#13513)
+
 2013-02-10  Christopher Schmidt  <christopher@ch.ristopher.com>
 
 	* minibuf-eldef.el (minibuffer-default--in-prompt-regexps): Handle
